--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,8 @@
 <h1><%= @post.title %></h1>
 
 <!-- Add code here to link to the post's category. -->
+<div>
+<%=link_to @post.category.name, category_path(@post.category.id)%>
 
+</div>
 <p><%= @post.description %></p>
